# consilio

./: .consilio.yml  .gitignore  .markdownlint.json  CLAUDE.md  CONTRIBUTING.md  DESIGN.md  Makefile  README.md  assemble.py  cloud.py  config.py  consult.py  consultation.py  editor.py  main.py  observe.py  prompts.py  pyproject.toml  python  requirements.txt  setup.py  storage.py  utils.py  workflow.py
.claude/: settings.local.json
.stubs/better_exceptions/: __init__.pyi
.stubs/google/generativeai/: __init__.pyi
Prompts/: SystemPrompt.md  UserPrompt-Assemble.md  UserPrompt-Consult.md  UserPrompt-Observe.md
Prompts/1-Observe/: SystemPrompt.md  UserPrompt.md
Prompts/2-Consult/: SystemPrompt.md  UserPrompt.md
Prompts/3-Advise/: UserPrompt.md
Topics/: .MarketingPlan.md.swp  BankLoan.md  MarketingPlan.md  SoloMarketing.md
ai/: __init__.py  claude.py  prompts.py
src/consilio/: assemble.py  bias.py  clarify.py  config.py  consult.py  discuss.py  edit.py  executor.py  init.py  interview.py  logging.py  main.py  models.py  observe.py  perspective_utils.py  perspectives.py  py.typed  stress.py  summary.py  topics.py  utils.py  version.py
src/consilio/prompts/: README.j2  Synthesis.md  additional_perspective.j2  bias.j2  clarify.j2  first_round.j2  interview.j2  perspectives.j2  single_perspective.j2  stress.j2  subsequent_round.j2  summary.j2  system.j2
src/consilio/schemas/: clarification_schema.json  discussion_schema.json  perspectives_schema.json
test/: 241209_133140-test.md
tests/: conftest.py  test_assemble.py  test_clarify.py  test_consult.py  test_main.py  test_models.py  test_models_topic_rounds.py  test_observe.py  test_perspectives.py  test_utils.py
tests/ai/: test_claude.py  test_prompts.py
tests/workflow/: test_consultation.py  test_observation.py  test_state.py  test_synthesis.py
workflow/: __init__.py  assemble.py  consultation.py  observation.py  observe.py  state.py  synthesis.py
