[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "consilio"
version = "0.1"
authors = [
    { name="Alex Dong", email="author@example.com" },
]
description = "A Personal Decision Making Tool powered by LLMs"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/yourusername/consilio"
"Bug Tracker" = "https://github.com/yourusername/consilio/issues"

[project.scripts]
consilio = "main:main"
