[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "consilio"
version = "0.1.6"
authors = [
    { name="Alex Dong", email="me@alexdong.com" },  
]
description = "A Personal Decision Making Tool powered by LLMs"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "anthropic>=0.8.0",
    "better-exceptions>=0.3.3",
    "click>=8.1.8",
    "prompt-toolkit>=3.0.0",
    "PyYAML>=6.0.1",
    "Jinja2>=3.1.0",
    "python-slugify>=8.0.1",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.9",
    "twine>=4.0.2",
    "build>=1.0.3",
]

[project.urls]
"Homepage" = "https://github.com/alexdong/consilio"
"Bug Tracker" = "https://github.com/alexdong/consilio/issues"

[project.scripts]
cons = "consilio.main:cli"

[tool.setuptools.packages.find]
where = ["src"]
